Fixed carousel text, images, and video alignment in carousel

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,8 @@
-/* Add here all your css styles (customizations) */
-.margin-fixer {
-    margin-left: 45%;
+div.da-img.dayoutubevideo {
+    top: 10px;
+    margin-left: -489px;
+}
+
+div.da-img.da-ruger {
+margin-left: -624px;
 }
