--- a/assets/plugins/parallax-slider/css/parallax-slider.css
+++ b/assets/plugins/parallax-slider/css/parallax-slider.css
@@ -17,7 +17,7 @@
 	width: 100%;
 	height: 100%;
 	top: 0px;
-	left: 79px;
+	left: 6px;
 	font-family: 'BebasNeueRegular', 'Arial Narrow', Arial, sans-serif;
 	text-align: left;
 }
